--- a/test.csproj
+++ b/test.csproj
@@ -31,10 +31,12 @@
     <Folder Include="ClientApp\src\app\Components\fetch-room\" />
     <Folder Include="ClientApp\src\app\Components\fetch-slot\" />
     <Folder Include="ClientApp\src\app\Components\add-room\" />
+    <Folder Include="ClientApp\src\app\Components\add-slot\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="ClientApp\src\app\Components\add-room.cs" />
     <Compile Remove="Controllers\SlotAPIController.cs" />
+    <Compile Remove="Models\StaffDataAccessLayer.css" />
   </ItemGroup>
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
